fix(toast): sync state with server
Add a "data-tobago-toast-id" attribute to identify the toast. This is better because now we don't have to deal with duplicate ids. A duplicate "data-tobago-toast-id" is fine.
Refactor the ids, name and data-tobago-for values.

Fix sync state: The listeners are now set correctly for updated toasts.
The EventListenerStore is now used for listeners.

Issue: TOBAGO-2532